--- a/src/index.css
+++ b/src/index.css
@@ -48,10 +48,11 @@
 .stats-table {
   width: 100%;
   border-collapse: collapse;
-  border: 1px solid #ddd;
+  margin-bottom: 20px;
 }
 
-.stats-table th, .stats-table td {
+.stats-table th,
+.stats-table td {
   padding: 8px;
   text-align: left;
   border-bottom: 1px solid #ddd;
@@ -59,13 +60,8 @@
 
 .stats-table th {
   background-color: #f2f2f2;
+}
+
+.label {
   font-weight: bold;
-}
-
-.stats-table tbody tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
-
-.stats-table tbody tr:hover {
-  background-color: #ddd;
 }
